--- a/src/Css/App.css
+++ b/src/Css/App.css
@@ -1,42 +1,443 @@
-.title{
-  font-size: 25px;
-  color:blueviolet;
-  position: absolute;
-left: 120px;
-bottom: 370px;
+/* Signup css started */
+.sign-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 90vh;
 }
-.title2{
-  font-size: 25px;
-  color:blueviolet;
-  position: absolute;
-left: 120px;
-bottom: 240px;
+form {
+  width: 400px;
+  padding: 20px;
+  background-color: #f7f7f7;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+.title {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 20px;
+  text-align: center;
+}
+.form-group {
+  margin-bottom: 15px;
+}
+.field {
+  font-weight: bold;
+}
+.input {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  font-size: 14px;
+  transition: border-color 0.3s ease;
+}
+.input:hover,
+.input:focus {
+  border-color: #428bca;
+}
+.submit {
+  width: 100%;
+  padding: 10px;
+  margin-top: 20px;
+  background-color: #428bca;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+.submit:hover {
+  background-color: #3071a9;
+}
+/* Signup css ended */
+
+/* Login page css start */
+.Login-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 10vh;
+  background-color: #f2f2f2;
+}
+.form-fieldset {
+  border: none;
+  padding: 20px;
+  border-radius: 5px;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 350px;
+}
+.title2 {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+.field2 {
+  font-size: 16px;
+  margin-top: 20px;
+}
+.input2 {
+  width: 100%;
+  height: 40px;
+  padding: 5px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+.forgot-password {
+  /* text-decoration: none; */
+  color: #0066cc;
+  font-size: 14px;
+  /* display: inline-block; */
+  /* margin-top: 10px; */
+}
+.submit2 {
+  width: 100%;
+  height: 40px;
+  background-color: #4caf50;
+  color: white;
+  font-size: 16px;
+  font-weight: bold;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+.submit2:hover {
+  background-color: #45a049;
+}
+/* Additional styles to improve visual appearance */
+.Login-page {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 90vh;
+}
+.form-fieldset {
+  max-width: 400px;
+}
+.input2 {
+  font-size: 16px;
+  padding: 10px;
+}
+.forgot-password {
+  display: block;
+  margin-top: 15px;
+  text-align: right;
+}
+.submit2 {
+  margin-top: 20px;
+}
+/* Login page css ended */
+
+/* Add Product page css start */
+.AddProduct-page {
+  max-width: 300px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #f8f8f8;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin-top: 50px;
 }
 
-.sign-page{
-  margin-top: 100px;
-  position: absolute;
-  right: 440px;
-  bottom: 150px;
-  width: 200px;
-  border: 3px solid gray;
+.Add-field {
+  font-weight: bold;
+  margin-bottom: 5px;
+}
 
-  padding: 50px;
-  background-color: aliceblue;
+.Add-input {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin-bottom: 10px;
+}
+
+.Add-submit {
+  background-color:#0066cc;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.Add-submit:hover {
+  background-color: skyblue;
+}
+
+/* Add Product page css ended */
   
+  /* Serach page css start */
+  .head {
+    color: black;
+    font-size: 24px;
+    margin-bottom: 20px;
+    text-shadow: 2px 2px 5px skyblue;
   }
-  .field{
-    font-size: larger;
+  .search-box {
+    width: 300px;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    margin-bottom: 10px;
   }
-  .input{
-    height: 20px;
-    width: 200px;
-  }
-  .submit{
-    margin-left:60px;
+  .submit-page1 {
     background-color: green;
-    color: whitesmoke;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 4px;
+    cursor: pointer;
+    font-weight: bold;
   }
+  .submit-page1:hover {
+    background-color: rgb(54, 199, 54);
+  }
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+    border: 1px solid #ccc;
+  }
+  table th,
+  table td {
+    padding: 8px;
+    text-align: left;
+    border: 1px solid #ccc;
+  }
+  .table-tag:nth-child(even) {
+    background-color: #f8f8f8;
+  }
+  .delete-tag {
+    background-color: rgb(181, 55, 55);
+    color: white;
+    border: none;
+    padding: 6px 12px;
+    border-radius: 4px;
+    cursor: pointer;
+    font-weight: bold;
+  }
+  .delete-tag:hover {
+    background-color: red;
+  }
+  .update-tag {
+    background-color: rgb(107, 107, 172);
+    color: white;
+    border: none;
+    padding: 6px 12px;
+    border-radius: 4px;
+    cursor: pointer;
+    font-weight: bold;
+  }
+  .update-tag:hover {
+    background-color: rgb(71, 71, 143);
+  }
+  .table-tag{
+    margin-left: 50px;
+    margin-right: 40px;
+  }
+  .search-tag{
+    display: flex;
+    justify-content: space-between;
+
+  }
+  
+  /* search page css ended */
+  /* file upload css start */
+  .image-page {
+    background-color: #f1f1f1;
+    padding: 20px;
+    border: 2px solid #ccc;
+    width: 300px;
+    height: 200px;
+    margin: 50px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
+    transition: box-shadow 0.3s ease;
+  }
+  
+  .image-page:hover {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  }
+  
+  .image-upload {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+  }
+  
+  .image-upload-icon {
+    font-size: 36px;
+    margin-bottom: 10px;
+    color: #4caf50;
+  }
+  
+  .image-upload-text {
+    color: #4caf50;
+    font-weight: bold;
+    font-size: 16px;
+  }
+  
+  .image-upload-input {
+    display: none;
+  }
+  
+  .submit-page {
+    background-color: #4caf50;
+    border: none;
+    border-radius: 3px;
+    color: white;
+    height: 40px;
+    width: 150px;
+    margin-top: 20px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
+  }
+  
+  .submit-page:hover {
+    background-color: #45a049;
+  }
+  
+  .submit-page:focus {
+    outline: none;
+  }
+  
+  /* file upload css ended */
+  
+  /* file versioning css start */
+  .file-versioning-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 100px;
+  }
+  
+  .file-list {
+    margin-right: 50px;
+  }
+  
+  .submit-button {
+    background-color: #428bca;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 4px;
+    cursor: pointer;
+    font-weight: bold;
+  }
+  
+  .file-item {
+    margin-bottom: 20px;
+  }
+  
+  .file-name {
+    font-weight: bold;
+  }
+  
+  .file-versions-table {
+    border-collapse: collapse;
+    margin-top: 10px;
+  }
+  
+  .file-versions-table td {
+    border: 1px solid #ccc;
+    padding: 8px;
+  }
+  
+  .version-page {
+    display: flex;
+    flex-direction: column;
+    border: 2px solid whitesmoke;
+    width: 300px;
+    height: 250px;
+  }
+  
+  .version-page input[type="text"] {
+    padding: 5px;
+    margin-bottom: 10px;
+  }
+  
+  .version-update {
+    margin-top: 50px;
+    font-weight: bold;
+  }
+  
+  /* file versioning css end */
+  
+  /* navbar css start */
+  .navbar {
+    background-color: rgb(181, 215, 230);
+    padding: 10px;
+  }
+  
+  .link-tag {
+    text-decoration: none;
+    color: #fff;
+    margin-right: 10px;
+    font-weight: bold;
+    background-color: #2196f3;
+    padding: 8px 12px;
+    border-radius: 4px;
+    transition: background-color 0.3s ease;
+  }
+  
+  .link-tag:hover {
+    background-color: #1976d2;
+  }
+  .nav{
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  /* navbar css end */
+  /* change password css start */
+  .input-tag {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    font-size: 14px;
+    transition: border-color 0.3s ease;
+  }
+  .input-tag:hover,
+  .input-tag:focus {
+    border-color: #428bca;
+  }
+  .reset{
+    background-color: orange;
+    border-color: orange;
+    border-radius: 10px;
+    width: 150px;
+    height: 40px;
+  }
+  .reset-password-page{
+    background-color: aliceblue;
+    border: 3px solid aliceblue;
+    margin: 50px;
+    padding: 50px;
+    width: 250px;
+    height: 150px;
+  }
+  .field-password-page{
+    font-size: larger;
+    margin-right: 75px;
+  }
+  /* change password css end */
   .reset-page{
     background-color: aliceblue;
     border: 3px solid gray;
@@ -45,64 +446,13 @@ bottom: 240px;
     width: 200px;
     height: 100px;
   }
-  .reset{
-    background-color: orange;
-  }
+ 
   .field-page{
     font-size: larger;
     margin-right: 45px;
   }
-  .image-page{
-    background-color: aliceblue;
-    padding: 20px;
-    border: 2px solid gray;
-    width: 200px;
-    height: 100px;
+  error{
+    font-size: 13px;
+    color: #ff6774;
   }
-  .submit-page{
-    background-color: green;
-    color: white;
-  }
-  table, th, td {
-    border: 3px solid black;
-    border-collapse: collapse;
-    padding: 10px;
-    text-shadow:2px 2px 5px violet;
-  }
-  .head{
-    text-shadow: 2px 2px 5px red;
-  }
-  .search-box{
-    height: 30px;
-    width:300px;
-    margin: auto;
-    outline-color: black;
-  }
-  .submit-page1{
-    height: 30px;
-    width: 80px;
-    background-color: green;
-    color: white;
-  }
-  .table-tag{
-    background-color: lightgray;
-    color: blue;
-  }
-  .delete-tag{
-    background-color: red;
-    color: white;
-  }
-  .navbar{
-    width: 100%;
-    display: flex;
-    justify-content:space-between;
-    height: 35px;
-    background-color:black;
-    color:white;
-  }
-  .link-tag{
-    color: black;
-    border: 1px solid lightgrey;
-    background-color: lightgray;
-    text-decoration: none;
-  }
+  
